<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:paddingLeft="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/defaultTextColor"
                    android:id="@+id/tvNoPolis"
                    android:textStyle="bold"
                    android:text="@string/no_polis_1011"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textStyle="bold"
                    android:id="@+id/tv_tgl_awal_akhir"
                    android:textColor="@color/defaultTextColor"
                    android:text="@string/_2017_10_31_2018_12_16"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/userInfo"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_person_outline_black_24dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvNamaUser"
                            android:layout_width="wrap_content"
                            android:textColor="@color/defaultTextColor"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:text="Maulana Rizal Hilman" />

                        <TextView
                            android:id="@+id/tvNoKtp"
                            android:layout_width="wrap_content"
                            android:textColor="@color/defaultTextColor"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="@string/no_ktp_100101002003" />

                        <TextView
                            android:id="@+id/tvUsia"
                            android:layout_width="wrap_content"
                            android:textColor="@color/defaultTextColor"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="@string/usia_17_thn" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/userInfo"
                    android:background="@drawable/counter_bg"
                    android:layout_alignParentRight="true">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FFF"
                        android:id="@+id/tvNilaiPremi"
                        android:text="@string/premi_up_rp_21_000_00" />
                </LinearLayout>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/tvStatus"
                    android:textStyle="bold"
                    android:textColor="@color/defaultTextColor"
                    android:text="@string/status_aktif"/>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>